--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "mprib_tools" #change this to your project name (do a global search and replace for this string, including folder names)
-description = "Basic template of a python repository"
+name = "orbital" #change this to your project name (do a global search and replace for this string, including folder names)
+description = "3D motion capture vizualizer implemented in PyQt"
 readme = "README.md"
 authors = [{ name = "Mac Prible", email = "prible@gmail.com" }]
 license = { file = "LICENSE" }
@@ -32,8 +32,8 @@ dynamic = ["version"]
 dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]
 
 [tool.bumpver] #bump the version by entering `bumpver update` in the terminal
-current_version = "v2023.01.1006"
-version_pattern = "vYYYY.0M.BUILD[-TAG]"
+current_version = "0.0.0"
+version_pattern = "MAJOR.MINOR.PATCH"
 commit_message  = "Bump version {old_version} -> {new_version}"
 commit          = true
 tag             = true
@@ -41,9 +41,9 @@ push            = true
 
 [tool.bumpver.file_patterns]
 "pyproject.toml" = ["{version}"]
-"mprib_tools/__init__.py" = ["{version}"]
+"orbital/__init__.py" = ["{version}"]
 
 
 [project.scripts]
-mprib_tools = "mprib_tools.__main__:main"
+orbital = "orbital.__main__:main"
 
